--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ margin-left: 20px;
 border:1px;
 border-radius: 2px;
 margin-top: 10px;
-height: 180px;
+height: 200px;
 }
 .box-2{
 width:20%;
@@ -114,9 +114,12 @@ h3{
 }
 h4{
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
 }
 #h3{
     text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 .h5{margin-top: 30px;
 
