--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,12 @@ nav{
     letter-spacing: 5px;
     font-size: 50px;
 }
+@media(min-width:768px){
 .nav-links{
     display: flex;
     justify-content: space-around;
     width: 40%;
+}
 }
 .beta{
     margin-bottom: 10px;
@@ -85,6 +87,7 @@ margin-bottom: 100px;
     font-size:20px;
     margin-bottom: 12px;
 }
+
 .container{
     display: flex;
 }
@@ -95,7 +98,7 @@ margin-bottom: 100px;
  justify-content: space-between; 
 }
 .box-1{
-width: 20%;
+width: 25%;
 margin-left: 20px;
 border:1px;
 border-radius: 2px;
@@ -103,7 +106,7 @@ margin-top: 10px;
 height: 200px;
 }
 .box-2{
-width:20%;
+width:25%;
 margin-left: 20px;
 margin-top: 10px;
 
